Trabalhando com inputs

--- a/modulo_2/src/templates/Home/styles.css
+++ b/modulo_2/src/templates/Home/styles.css
@@ -11,7 +11,15 @@ body {
 }
 
 .button-wrapper {
-  min-height: 60px;
+  min-height: 75px;
   display: flex;
   align-items: flex-end;
+}
+
+.search-container {
+  margin-bottom: 30px;
+}
+
+.search-container h1 {
+  margin-bottom: 10px;
 }
