--- a/modulo_2/src/components/TextInput/styles.css
+++ b/modulo_2/src/components/TextInput/styles.css
@@ -7,6 +7,7 @@
     transition: 150ms ease-in;
 }
 
+/* ctrl + shift + A: comenta varias linhas ao mesmo tempo */
 .text-input:focus {
     outline: none;
 }
